--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "MultiWindow Phương Đông",
+    "message": "MultiWindow Đông Dương",
     "description": ""
   },
   "appDescription": {
@@ -8,7 +8,7 @@
     "description": ""
   },
   "OPTIONS_TITLE": {
-    "message": "Phương Đông WINDOW",
+    "message": "Đông Dương WINDOW",
     "description": ""
   },
   "TAB_SETTINGS": {
